<resources>

    <string name="app_name">ass3</string>
    <string name="widget_app_name">Weather Widget </string>
    <string name="tele_app_name">Incoming Calls</string>
    <string name="vaxjo_app_name">Weather App</string>
    <string name="vaxjo_app_name_weatherin">Weather in</string>
    <string name="vaxjo_wind">Wind:</string>
    <string name="vaxjo_rain">Rain:</string>
    <string name="vaxjo_speed">Speed:</string>
    <string name="vaxjo_temp_unit">°C</string>
    <string name="vaxjo_windspeed_unit">m/s</string>
    <string name="vaxjo_rain_unit">mm/h</string>
    <string name="weather_nointernet">No internet connection! Can not retrieve new weather data</string>
    <string name="weather_widget_label">1Weather</string>
    <string name="weather_citylist_addcity">Add City</string>
    <string name="weather_action_add">Add</string>
    <string name="mycountries_date_alert">Input for the date has to be four numbers (e.g. 2013)</string>
    <string name="mycountries_name_alert">Input for the country name has to be letters only and less then 20 characters</string>
    <string name="weather_city_list_app_name">Weather City List</string>
    <string name="weather_city_list_form_app_name">Weather City Form</string>
    <string name="weather_city_name">City name:</string>
    <string name="weather_city_name_hint">e.g. Växjö</string>
    <string name="weather_city_country">Country name:</string>
    <string name="weather_city_country_hint">e.g. Sweden</string>
    <string name="weather_city_state">State name:</string>
    <string name="weather_city_state_hint">e.g. Kronoberg</string>
    <string name="weather_city_formdescription">Please enter the correct details of the city you want to retrieve the weather from</string>
    <string name="weather_widget_update_button">Update</string>
    <string name="weather_widget_icon_hint">Weather Icon</string>
    <string name="telephony_alert">The device does not support telephony!</string>
    <string name="telephony_alert_airplane">The device is currently in airplane mode, can\'t call or send!</string>
    <string name="telephony_call">Call</string>
    <string name="telephony_sendvia_sms">Share via message</string>
    <string name="telephony_share">Share</string>

</resources>